--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
   "capabilities": [],
   "enableProposedApi": false,
   "editorType": ["figma"],
+  "ui": "ui.html",
   "networkAccess": {
     "allowedDomains": ["none"]
   }
